# guobang_bot

./: .env  .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
configs/: path_config.py
src/plugins/: HelloWorld.py
src/plugins/genshin_daily/: __init__.py
src/plugins/help/: __init__.py
src/plugins/setu/: __init__.py  get_pic.py
src/plugins/white_list/: __init__.py
